--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     text-decoration: none;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
     font-size: 14px;
+    
 }
 
 body {
@@ -21,12 +22,14 @@ body {
 
 footer li {
     display: inline;
+    color: #8E8E8E;
 }
 .instagram-wrapper {
     display: flex;
     flex-grow: 1;
     justify-content: center;
     align-items: center;
+    gap: 30px;
 }
 
 .login {
@@ -53,15 +56,46 @@ footer li {
 .login-form input {
     display: block;
     min-width: 280px;
-    padding: 6px;
-    margin-bottom: 10px;
+    height: 38px;
+    margin-bottom: 8px;
+    padding: 8px;
+    font-size: 0.85rem;
+    background-color: #FAFAFA;
+    border: 1px solid #dbdbdb;
+    border-radius: 2px;
+}
+
+.login-form input:focus {
+    outline: none;  
 }
 
 .login-form button {
+    margin-top: 9px;
     min-width: 280px;
     padding: 6px;
     border: 0;
     border-radius: 5px;
+    color: #fff;
+    background-color: #0095F6;
+}
+
+
+.image-demo {
+    background-image: url("img/smartphone-empty.png");
+    background-position: -46px 0;
+    background-size: 468.32px 634.15px;
+    min-width: 390px;
+    min-height: 580px;
+    
+}
+
+.image-demo img {
+    width: 250px;
+    height: 540px;
+    margin-top: 20px;
+    margin-left: 110px;
+    
+
 }
 
 @media (max-width: 875px) {
