--- a/style.css
+++ b/style.css
@@ -89,14 +89,69 @@ footer li {
     
 }
 
-.image-demo img {
+.image-demo .img-slider {
     width: 250px;
     height: 540px;
     margin-top: 20px;
     margin-left: 110px;
-    
+    background-image: url("img/screenshot1.png");
+    position: relative;
+    animation: fade 20s infinite ease-in-out;
 
 }
+
+
+@keyframes fade {
+    
+    20% {
+        background-image: url("img/screenshot1.png");
+        opacity: 0;
+    }
+    21% {
+        background-image: url("img/screenshot2.png");
+    }
+    25% {
+        background-image: url("img/screenshot2.png");
+        opacity: 1;
+    }
+    45% {
+        background-image: url("img/screenshot2.png");
+        opacity: 0;
+    }
+    46% {
+        background-image: url("img/screenshot3.png");
+    }
+    50% {
+        background-image: url("img/screenshot3.png");
+        opacity: 1;
+    }
+    70% {
+        background-image: url("img/screenshot3.png");
+        opacity: 0;
+    }
+    71% {
+        background-image: url("img/screenshot4.png");
+    }
+
+    75% {
+        background-image: url("img/screenshot4.png");
+        opacity: 1;
+    }
+    95% {
+        background-image: url("img/screenshot4.png");
+        opacity: 0;
+    }
+    96% {
+        background-image: url("img/screenshot1.png");
+    }
+    100% {
+        background-image: url("img/screenshot1.png");
+        opacity: 1;
+    }
+
+  }
+  
+
 
 @media (max-width: 875px) {
     .image-demo {
