--- a/style.css
+++ b/style.css
@@ -125,6 +125,9 @@ footer li {
         background-image: url("img/screenshot3.png");
         opacity: 1;
     }
+    65% {
+        opacity: 1;
+    }
     70% {
         background-image: url("img/screenshot3.png");
         opacity: 0;
