--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
+    text-decoration-color: rgb(0, 102, 204);
     
     
 }
@@ -35,7 +36,50 @@ footer li {
 .login {
     display:flex;
     flex-direction: column;
-    max-width: 350px;
+    min-width: 350px;
+}
+
+.login-facebook {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.login-facebook a {
+    color: #385185;
+    font-weight: 600;
+    flex-direction: row;
+    font-size: 0.9rem;
+}
+
+.forgot-password a {
+    font-size: 0.83rem;
+    color: #262626;
+    font-weight: 400;
+}
+
+.login-separador {
+
+    color: #8e8e8e;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+
+.login-separador .horizontal-line {
+    background-color: #dbdbdb;
+    border-top: 1px solid #dbdbdb;
+    height: 1px;
+    width: 108px;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+.login-separador .line-text {
+    flex-grow: 0;
+    flex-shrink: 0;
+    color:  #8e8e8e;
 }
 
 .login-box {
@@ -154,6 +198,56 @@ footer li {
 
   }
   
+
+.download-app {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.app-icons {
+    display: flex;
+    gap: 10px;
+}
+
+
+footer {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 760px;
+    margin-bottom: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #8E8E8E;
+    gap: 20px;
+}
+
+footer select {
+    color: #8e8e8e;
+    outline: 0;
+    border: 0 solid black;
+    background-color: #fafafa;
+    font-size: 0.85rem;
+}
+
+.links {
+    display:flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+}
+
+.links span  {
+    font-size: 0.85rem;
+}
+
+footer p {
+    font-size: 0.85rem;
+}
 
 
 @media (max-width: 875px) {
